fix(gradle): add hotswap in debug mode